# physball

./: .gitignore  Cargo.toml  README.md
.cargo/: config_macos.toml
.github/workflows/: build.yml  release.yml
assets/fonts/: index.json
assets/levels/: index.json  level1.kdl  test1.level.kdl  tutorial1.kdl  tutorial1.level.kdl  tutorial2.kdl  tutorial2.level.kdl
assets/levels/level1/: ball.material.json  base.material.json  button.off.material.json  button.on.material.json  level1.level.kdl  railing.material.json
assets/levels/test1/: checker-plane.material.json  test1.level.kdl
assets/preload/: button-holder.glb  button-plate.glb  glow-text.material.json  index.json  level-end.glb  physball-light.xcf  physball.glb
assets/preload/button/22015__jpolito__switches/: _readme_and_license.txt
assets/preload/door/37537__rubberduck9999__effects/: _readme_and_license.txt
src/: macros.rs  main.rs
src/game/: camera.rs  dirs.rs  game.rs  game_state.rs  gizmos.rs  gui.rs  input.rs  levels.rs  logic.rs  main_menu.rs  mod.rs  music.rs  screenshot.rs  settings.rs  startup.rs  state.rs
src/game/assets/: asset_ref.rs  builtin.rs  fonts.rs  materials.rs  mod.rs  preload.rs
src/game/input/: desktop.rs  gamepad.rs  mod.rs  web.rs
src/game/levels/: button.rs  death.rs  finish_point.rs  index.rs  mod.rs  serial.rs
src/game/levels/serial/: asset_ref.rs  error.rs  kdl.rs  kdl_old.rs  kdl_utils.rs  level.rs  mod.rs
src/game/levels/serial/level/: button.rs  cuboid.rs  dynamic.rs  mod.rs  music.rs  plane.rs  text.rs
src/game/main_menu/: mod.rs
src/game/menus/: finish_menu.rs  loading_screen.rs  main_menu.rs  mod.rs  options_menu.rs  pause_menu.rs
src/game/startup/: mod.rs
web/: index.html
