[package]
name = "physball"
version = "0.1.0"
edition = "2024"

[features]
hot-reload = ["bevy/file_watcher"]
default = ["hot-reload"]

[dependencies]
anyhow = "1.0"
avian3d = "0.4"
bevy = { version = "0.17", features = ["experimental_bevy_ui_widgets"] }
bevy_rich_text3d = "0.5"
bevy_svg = "0.17"
cosmic-text = "0.14.2"
directories = "6"
event-listener = "5"
knus = { git = "https://github.com/TheLostLambda/knus.git", branch = "kdl-v2" }
lazy_static = "1"
miette = { version = "7", features = ["fancy"] }
# Set max log levels. This helps avoid unwanted low-severity log spam, which can affect performance.
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_info",
] }
serde = "1"
serde_json = "1"
sha2 = "0.11.0-rc.3"
sys-locale = "0.3.2"
thiserror = "2"
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_info",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.81", features = ["Storage"] }

# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
# In some cases they may still signal poor code quality however, so consider commenting out these lines.
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
