[package]
name = "physball"
version = "0.1.0"
edition = "2024"

[features]
# Physball features
hot-reload = ["bevy/file_watcher"]
quit-button = []
window-resize = []

input-desktop = []
input-web = ["web-sys"]
input-gamepad = []

web-panic-hook = ["console_error_panic_hook"]
web-storage = ["web-sys", "web-sys/Storage"]

# Physball Platforms
web = ["input-web", "web-panic-hook", "web-storage"]
webgpu = ["web", "bevy/webgpu"]
desktop = ["input-desktop", "input-gamepad", "hot-reload", "quit-button", "window-resize"]

default = ["desktop"]

[package.metadata.bevy_cli.web]
# Disable default features for web builds
default-features = false
features = ["web"]

[dependencies]
avian3d = "0.4"
bevy = { version = "0.17", features = ["experimental_bevy_ui_widgets"] }
bevy_rich_text3d = "0.5"
bevy_svg = "0.17"
chrono = "0.4"
cosmic-text = "0.14.2"
directories = "6"
kdl = "6"
lazy_static = "1"
miette = { version = "7", features = ["fancy"] }
# Set max log levels. This helps avoid unwanted low-severity log spam, which can affect performance.
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_info",
] }
serde = "1"
serde_json = "1"
sha2 = "0.11.0-rc.3"
strum = { version = "0.27", features = ["derive"] }
sys-locale = "0.3.2"
thiserror = "2"
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_info",
] }

# web dependencies
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.81", optional = true }

# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
# In some cases they may still signal poor code quality however, so consider commenting out these lines.
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
